--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startsida</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -17,7 +23,13 @@
       <a href="#" class="slide">Medlemssajter</a>
     </header>
     <main>
-      <div class="banner"></div>
+      <div
+        class="banner"
+        alt="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
+      >
+        <p class="abc">ABC</p>
+        <p class="club">Klubben</p>
+      </div>
       <div class="content">
         <h2>Välkommen som medlem</h2>
         <p>
