--- a/html/board.html
+++ b/html/board.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Startsida" />
     <title>Startsida</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,20 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
     <header>
-      <a
-        href="#"
-        class="menu"
-        aria-haspopup="true"
-        aria-expanded="false"
-        aria-label="Menyknapp"
-      >
+      <a href="#" class="menu" aria-haspopup="true" aria-expanded="false">
         <div class="menu"></div>
       </a>
-      <a href="index.html" class="home slide">Startsida</a>
+      <a href="/index.html" class="home slide">Startsida</a>
       <a href="/html/info.html" class="info slide">Information</a>
       <a href="/html/board.html" class="board slide">Styrelse</a>
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
@@ -40,38 +33,35 @@
         <p class="abc">ABC</p>
         <p class="club">Klubben</p>
       </div>
-      <div class="content">
-        <h2>Välkommen som medlem</h2>
+      <div id="content">
+        <h2>Styrelse</h2>
         <p>
-          Vi har ett antal servrar som kör OpenBSD där medlemmarna kan logga in
-          och köra egna program. Vi lägger upp standardpaket om det finns
-          speciella önskemål.
+          Vi håller årsmöte och väljer styrelse i mars varje år. Vid senaste
+          årsmötet valdes följande personer:
         </p>
+
+        <h3>Styrelse fr.o.m 2024-03-16</h3>
+
+        <p>Vid ordinarie årsmöte 2024-03-16 valdes följande personer:</p>
         <p>
-          Som medlem får du en unik e-postadress. Vår e-postserver är inte
-          övervakad och din e-post läses inte av någon. Vi har normalt
-          spamskydd, men det bygger inte på att vi läser innehållet i din
-          e-post.
+          Tommy Hamberg &lt;508&gt;, ordförande, email&nbsp;m508@abc.se<br />
+          Gabriel Kihlman &lt;10723&gt;, vice ordförande,
+          email&nbsp;gk@abc.se<br />
+          Andreas Olsson &lt;9874&gt;, sekreterare, email&nbsp;m9874@abc.se<br />
+          NilsOla Nilsson &lt;10785&gt;, kassör, email&nbsp;nilsola@abc.se<br />
+          Marcus Strömberg &lt;9370&gt;, ledamot, email&nbsp;m9370@abc.se<br />
+          Tora Philp &lt;10886&gt;, ledamot, email&nbsp;m10886@abc.se<br />
         </p>
+
+        <h3>Revisorer</h3>
         <p>
-          Det finns även en del andra
-          <a href="/html/benefits.html">förmåner</a> du kan få som medlem, t.ex.
-          har vi en VPN-tjänst.
+          Beatriz Pereira, BTRIX Ekonomitjänster för företag och privatpersoner,
+          email&nbsp;info@btrix.se<br />
         </p>
-        <p>
-          ABC-klubben bildades 1980 och var från början en klubb för användare
-          av ABC80-datorer. ABC-klubbens första årsmöte finns skildrat i boken
-          "Svenska&nbsp;Hackare" av Daniel Goldberg och Linus Larsson.
-        </p>
-        <p>
-          ABC-Klubben är en internetreklambefriad förening. Klubben bidrar inte
-          till nättracking och försöker motverka nätets spårningstjänster. Den
-          enda analys föreningen gör är för att minska spam i din e-post.
-        </p>
-        <p>
-          Kontrollera dina inställningar för e-post
-          <a href="#">här</a>.
-        </p>
+        <h3>Valberedning</h3>
+        <p>Vakant</p>
+        <h3>Stadgar</h3>
+        <p>Våra stadgar finns <a href="stadgar.pdf">här</a></p>
       </div>
     </main>
     <footer>
