--- a/html/benefits.html
+++ b/html/benefits.html
@@ -2,8 +2,164 @@
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medlemsförmåner</title>
+    <meta
+      name="Medlemsförmåner"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Startsida</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../main.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#" class="menu" aria-haspopup="true" aria-expanded="false">
+        <div class="menu"></div>
+      </a>
+      <a href="/index.html" class="home slide">Startsida</a>
+      <a href="/html/info.html" class="info slide">Information</a>
+      <a href="/html/board.html" class="board slide">Styrelse</a>
+      <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
+      <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
+      <a href="#" class="slide">Medlemssajter</a>
+    </header>
+    <main>
+      <div
+        class="banner"
+        aria-label="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
+        title="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
+      >
+        <p class="abc">ABC</p>
+        <p class="club">Klubben</p>
+      </div>
+      <div id="content">
+        <h1>Medlemsförmåner</h1>
+        <p>
+          När man tänker på allt man får genom att vara medlem i ABC-klubben är
+          det egentligen konstigt att det inte kostar mer.
+        </p>
+
+        <h3>Rabatt på datortidskrifter</h3>
+        <p>
+          Medlemskapet ger 25% rabatt på tidskriften
+          <a href="#">PC för alla</a>. Beställ prenumeration enklast via
+          <a href="#">denna länk</a>.
+        </p>
+        <h3>Personlig e-postadress</h3>
+        <p>
+          Som standard får du två adresser. Dels medlemsnummer@abc.se och dels
+          fornamn.efternamn@abc.se. Möjligheter finns givetvis också att
+          beställa egna alias till adressen.
+          <br />
+          Din post hämtar du via POP- eller IMAP med vanliga e-postprogram, via
+          vår webmail eller direkt på klubbens servrar med Pine eller något
+          annat Unix-program.
+          <br />
+          För att sända e-post använder du SMTP AUTH och sänder via vår server.
+          Instruktioner för detta finns under medlemsinfo.
+        </p>
+
+        <h3>Mailserver utan spionage</h3>
+        <p>
+          Vi läser eller analyserar aldrig våra medlemmas mejl. De flesta stora
+          mejlservrar, t.ex. google gmail, analyserar dina mejl för att kunna ge
+          dig riktade annonser, och för att upptäcka spam. Det slipper du hos
+          oss. Vi har spamskydd enligt de principer som beskrivs
+          <a href="#">här</a>, dvs. grålistning och spamtrapping, och det
+          innebär att vi aldrig analyserar innehållet i mejlen.
+        </p>
+
+        <h3>Egen webbplats på våra servrar</h3>
+        <p>
+          Om du vill kan du lägga upp en egen webbplats på någon av våra
+          servrar. Vi kör Apache (OpenBSD). För dig som behöver finns stöd för
+          bl.a. PHP och CGI.
+        </p>
+
+        <h3>Parkera egen domän hos klubben</h3>
+        <p>
+          För dig som har eller skaffar en egen domän finns möjligheten att
+          parkera den hos oss. Det innebär att du har din domän någonstans i
+          vårt system och att den är registrerad i våra DNS-servrar.
+        </p>
+
+        <h3>Skalkonto i klubbens UNIX-system</h3>
+        <p>
+          Alla medlemmar får inloggnings­uppgifter till vårt UNIX-system och ett
+          eget hembibliotek att lägga sin filer Vi har inte lagt några
+          begränsningar på hur mycket utrymme du får belägga (det finns så det
+          räcker), men vi vill att du säger till om du behöver mer än några GB.
+          <br />
+          Unixkontot får du som standard.
+        </p>
+
+        <h3>Vårt Webforum</h3>
+        <p>Diskussioner och informations­spridning om våra system</p>
+
+        <h3>Tillgång till ABC-Webben</h3>
+        <p>
+          Vi skulle önska att vi kunde visa dig allt det fina som finns på vårt
+          intranät ABC-Webben. Då skulle du precis som vi andra snabbt
+          konstatera att de tips, lektioner, instruktioner, guider och annat som
+          finns där mer än väl räcker för att motivera hela medlems­avgiften.
+        </p>
+
+        <h3>VPN-tjänst</h3>
+        <p>
+          Läs mer <a href="#">här</a> och kontakta
+          <a href="mailto:sysop@abc.se">sysop</a> för närmare info.
+        </p>
+
+        <h3>Backup</h3>
+        <p>
+          Gårdagens backup tillgänglig (monterad som /yesterday på
+          unix-servrarna)
+        </p>
+        <h3>Webbproxy</h3>
+        <p>
+          Vi har en webbproxy (squif) på orm som våra medlemmar kan använda. Den
+          lyssnar på port 3128 på localhost på orm. För att använda den behöver
+          du sätta upp en ssh-tunnel från din dator till orm.abc.se:<br />
+        </p>
+        <pre>$ ssh -L 3128:127.0.0.1:3128 orm.abc.se</pre>
+        <p>
+          Alternativt stoppa in följande i din ~/.ssh/config på hemmadatorn:
+        </p>
+
+        <pre>
+Host orm.abc.se
+      LocalForward 3128 127.0.0.1:3128</pre
+        >
+        <p>
+          ... och sedan starta chrome såhär: <br />
+          chrome --proxy-server=127.0.0.1:3128
+          <br />
+          alternativt: chrome --incognito --proxy-server=127.0.0.1:3128
+          <br />
+          Verifiera att det fungerar genom att surfa till
+          https://www.abc.se/~lln/ip/<br />
+          Den IP-address som står där bör vara 158.174.61.226.<br />
+          <br />
+          Vi har ingen loggning alls vilka som använder den eller till vart
+          någon surfar. Det är "access_log none"-direktivet i
+          /etc/squid/squid.conf på orm. Var vänlig och missbruka inte detta.
+          <br />
+          Vi har planer på att implementera adblocker för din webbrowser via
+          DNS.
+        </p>
+      </div>
+    </main>
+    <footer>
+      <p class="center">
+        - ABC-klubben, Box 2507, 116 74 STOCKHOLM -<br />
+        <a href="mailto:info@abc.se">info@abc.se</a>
+      </p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
