--- a/html/benefits.html
+++ b/html/benefits.html
@@ -6,7 +6,7 @@
       name="Medlemsförmåner"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Startsida</title>
+    <title>Medlemsförmåner</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -160,6 +160,6 @@ Host orm.abc.se
       </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
