--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="/html/board.html" class="board slide">Styrelse</a>
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
       <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide">Medlemssajter</a>
+      <a href="#" class="slide membersites">Medlemssajter</a>
     </header>
     <main>
       <div
@@ -75,10 +75,18 @@
       </div>
     </main>
     <footer>
-      <p class="center">
-        - ABC-klubben, Box 2507, 116 74 STOCKHOLM -<br />
+      <p>
+        ABC-klubben, Box 2507, 116 74 STOCKHOLM
+        <br />
         <a href="mailto:info@abc.se">info@abc.se</a>
       </p>
+      <div class="gdpr">
+        <p>
+          Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
+          nya dataskyddsförordningen (GDPR). Läs mer
+          <a href="#">här</a>.
+        </p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="js/app.js"></script>
