--- a/html/board.html
+++ b/html/board.html
@@ -33,7 +33,7 @@
         <p class="abc">ABC</p>
         <p class="club">Klubben</p>
       </div>
-      <div id="content">
+      <div class="content">
         <h2>Styrelse</h2>
         <p>
           Vi håller årsmöte och väljer styrelse i mars varje år. Vid senaste
@@ -65,10 +65,18 @@
       </div>
     </main>
     <footer>
-      <p class="center">
-        - ABC-klubben, Box 2507, 116 74 STOCKHOLM -<br />
+      <p>
+        ABC-klubben, Box 2507, 116 74 STOCKHOLM
+        <br />
         <a href="mailto:info@abc.se">info@abc.se</a>
       </p>
+      <div class="gdpr">
+        <p>
+          Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
+          nya dataskyddsförordningen (GDPR). Läs mer
+          <a href="#">här</a>.
+        </p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="/js/app.js"></script>
