--- a/html/info.html
+++ b/html/info.html
@@ -36,12 +36,110 @@
         <p class="abc">ABC</p>
         <p class="club">Klubben</p>
       </div>
+      <div class="content">
+        <h1>Info för klubbens medlemmar</h1>
+        <section class="wrapper">
+          <article class="moreabc">
+            <h2>Mer om ABC-klubben:</h2>
+            <ul>
+              <li><a href="#">Kontaktuppgifter</a></li>
+              <li><a href="#">ABC-faq:</a> Ofta ställda frågor</li>
+              <li><a href="#">Hur får jag support?</a></li>
+              <li><a href="#">Årsmöteshandlingar</a> från 1980 och framåt</li>
+              <li>
+                <a href="#">Styrelseledamöter</a> från 1980 och framåt - tabell
+              </li>
+              <li>
+                <a href="#">Nyhetsbrevet ABC</a> från september 2011 och framåt
+              </li>
+              <li><a href="#">ABC-bladet</a> från 1997 till 2010</li>
+              <li><a href="#">ABC-bullen</a> från 2001 till 2010</li>
+              <li>
+                <a href="#">Nätverksinställningar</a> i ett lokalt hemmanätverk
+              </li>
+              <li><a href="#">Möten för medlemmar</a></li>
+            </ul>
+          </article>
+          <article class="pcsystem">
+            <h2>Datorsystemet:</h2>
+            <ul>
+              <li><a href="#">Här kan du anmäla fel i systemet</a></li>
+              <li><a href="#">Tjänsterna i klubbens unixsystem</a></li>
+              <li><a href="#">Datorerna i klubbens unixsystem</a></li>
+              <li>
+                <a href="#"
+                  >Hur loggar man in i klubbens unixsystem. Byt password. -
+                  (Unixlogin)</a
+                >
+              </li>
+              <li><a href="#">Ändra ditt lösenord! - (Unixlogin)</a></li>
+            </ul>
+          </article>
+          <article class="email">
+            <h2>E-post:</h2>
+            <ul>
+              <li>
+                <a href="#">Om klubbens e-postserver och e-postprogram</a>
+              </li>
+              <li><a href="#">Om SMTP-AUTH</a> och hur du använder det</li>
+            </ul>
+          </article>
+          <article class="chat">
+            <h2>Chat:</h2>
+            <ul>
+              <li><a href="#">Om chat på abc.se</a></li>
+            </ul>
+          </article>
+          <article class="sftp">
+            <h2>SFTP - File Transfer Protocol:</h2>
+            <ul>
+              <li><a href="#">WinSCP Ett SFTP-program med stöd för SCP</a></li>
+            </ul>
+          </article>
+          <article class="websites">
+            <h2>Om webbsidor på <u>www.abc.se</u></h2>
+            <ul>
+              <li><a href="#">Egen hemsida hos ABC-klubben. Hur gör man</a></li>
+              <li>
+                <a href="#">Lösenordsskydda kataloger på www.abc.se</a> - av
+                Peter Kindström
+              </li>
+            </ul>
+          </article>
+          <article class="other">
+            <h2>Övrig information för medlemmar:</h2>
+            <ul>
+              <li><a href="#">Windows-länkar</a> - Johan Persson</li>
+              <li>
+                <a href="#">Opinionsundersökning</a> på webben, - av Anders
+                Franzén
+              </li>
+              <li>
+                <a href="#">En liten introduktion till Unix</a> - av Johan
+                Persson
+              </li>
+              <li>
+                Här hittar du det som finns kvar av
+                <a href="#">Programbanken</a>
+              </li>
+            </ul>
+          </article>
+        </section>
+      </div>
     </main>
     <footer>
-      <p class="center">
-        - ABC-klubben, Box 2507, 116 74 STOCKHOLM -<br />
+      <p>
+        ABC-klubben, Box 2507, 116 74 STOCKHOLM
+        <br />
         <a href="mailto:info@abc.se">info@abc.se</a>
       </p>
+      <div class="gdpr">
+        <p>
+          Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
+          nya dataskyddsförordningen (GDPR). Läs mer
+          <a href="#">här</a>.
+        </p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="/js/app.js"></script>
