--- a/html/pcsystems.html
+++ b/html/pcsystems.html
@@ -38,10 +38,18 @@
       </div>
     </main>
     <footer>
-      <p class="center">
-        - ABC-klubben, Box 2507, 116 74 STOCKHOLM -<br />
+      <p>
+        ABC-klubben, Box 2507, 116 74 STOCKHOLM
+        <br />
         <a href="mailto:info@abc.se">info@abc.se</a>
       </p>
+      <div class="gdpr">
+        <p>
+          Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
+          nya dataskyddsförordningen (GDPR). Läs mer
+          <a href="#">här</a>.
+        </p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="/js/app.js"></script>
