--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header>
+    <navbar>
       <a
         href="#"
         class="menu"
@@ -30,7 +30,7 @@
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
       <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
       <a href="#" class="slide membersites">Medlemssajter</a>
-    </header>
+    </navbar>
     <main>
       <div
         class="banner"
