--- a/html/board.html
+++ b/html/board.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
-    <header>
+    <navbar>
       <a href="#" class="menu" aria-haspopup="true" aria-expanded="false">
         <div class="menu"></div>
       </a>
@@ -23,7 +23,7 @@
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
       <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
       <a href="#" class="slide">Medlemssajter</a>
-    </header>
+    </navbar>
     <main>
       <div
         class="banner"
