--- a/html/benefits.html
+++ b/html/benefits.html
@@ -16,8 +16,14 @@
     <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
-    <navbar>
-      <a href="#" class="menu" aria-haspopup="true" aria-expanded="false">
+    <nav>
+      <a
+        href="#"
+        class="menu"
+        aria-haspopup="true"
+        aria-expanded="false"
+        aria-label="Menyknapp"
+      >
         <div class="menu"></div>
       </a>
       <a href="/index.html" class="home slide">Startsida</a>
@@ -25,8 +31,8 @@
       <a href="/html/board.html" class="board slide">Styrelse</a>
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
       <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide">Medlemssajter</a>
-    </navbar>
+      <a href="#" class="slide membersites">Medlemssajter</a>
+    </nav>
     <main>
       <div
         class="banner"
@@ -45,9 +51,11 @@
 
         <h3>Rabatt på datortidskrifter</h3>
         <p>
-          Medlemskapet ger 25% rabatt på tidskriften
-          <a href="#">PC för alla</a>. Beställ prenumeration enklast via
-          <a href="#">denna länk</a>.
+          Medlemskapet ger 25% rabatt på
+          <a href="#">tidskriften PC för alla</a>.
+          <a href="#"
+            >Beställ prenumeration till "PC för alla" enklast via denna länk</a
+          >.
         </p>
         <h3>Personlig e-postadress</h3>
         <p>
@@ -68,9 +76,10 @@
           Vi läser eller analyserar aldrig våra medlemmas mejl. De flesta stora
           mejlservrar, t.ex. google gmail, analyserar dina mejl för att kunna ge
           dig riktade annonser, och för att upptäcka spam. Det slipper du hos
-          oss. Vi har spamskydd enligt de principer som beskrivs
-          <a href="#">här</a>, dvs. grålistning och spamtrapping, och det
-          innebär att vi aldrig analyserar innehållet i mejlen.
+          oss. Vi har spamskydd enligt de principer som beskrivs , dvs.
+          grålistning och spamtrapping, och det innebär att vi aldrig analyserar
+          innehållet i mejlen.
+          <a href="#">Läs mer om vår e-post säkerhet här.</a>
         </p>
 
         <h3>Egen webbplats på våra servrar</h3>
@@ -110,8 +119,8 @@
 
         <h3>VPN-tjänst</h3>
         <p>
-          Läs mer <a href="#">här</a> och kontakta
-          <a href="mailto:sysop@abc.se">sysop</a> för närmare info.
+          <a href="#">Läs mer om vår VPN-tjänst här</a> och
+          <a href="mailto:sysop@abc.se">kontakta sysop för närmare info.</a>
         </p>
 
         <h3>Backup</h3>
@@ -162,8 +171,8 @@ Host orm.abc.se
       <div class="gdpr">
         <p>
           Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
-          nya dataskyddsförordningen (GDPR). Läs mer
-          <a href="#">här</a>.
+          nya dataskyddsförordningen (GDPR).
+          <a href="#">Läs mer om GDPR här.</a>
         </p>
       </div>
     </footer>
