--- a/html/board.html
+++ b/html/board.html
@@ -13,8 +13,14 @@
     <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
-    <navbar>
-      <a href="#" class="menu" aria-haspopup="true" aria-expanded="false">
+    <nav>
+      <a
+        href="#"
+        class="menu"
+        aria-haspopup="true"
+        aria-expanded="false"
+        aria-label="Menyknapp"
+      >
         <div class="menu"></div>
       </a>
       <a href="/index.html" class="home slide">Startsida</a>
@@ -22,8 +28,8 @@
       <a href="/html/board.html" class="board slide">Styrelse</a>
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
       <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide">Medlemssajter</a>
-    </navbar>
+      <a href="#" class="slide membersites">Medlemssajter</a>
+    </nav>
     <main>
       <div
         class="banner"
@@ -73,8 +79,8 @@
       <div class="gdpr">
         <p>
           Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
-          nya dataskyddsförordningen (GDPR). Läs mer
-          <a href="#">här</a>.
+          nya dataskyddsförordningen (GDPR).
+          <a href="#">Läs mer om GDPR här.</a>
         </p>
       </div>
     </footer>
