--- a/html/info.html
+++ b/html/info.html
@@ -16,8 +16,14 @@
     <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
-    <navbar>
-      <a href="#" class="menu" aria-haspopup="true" aria-expanded="false">
+    <nav>
+      <a
+        href="#"
+        class="menu"
+        aria-haspopup="true"
+        aria-expanded="false"
+        aria-label="Menyknapp"
+      >
         <div class="menu"></div>
       </a>
       <a href="/index.html" class="home slide">Startsida</a>
@@ -25,8 +31,8 @@
       <a href="/html/board.html" class="board slide">Styrelse</a>
       <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
       <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide">Medlemssajter</a>
-    </navbar>
+      <a href="#" class="slide membersites">Medlemssajter</a>
+    </nav>
     <main>
       <div
         class="banner"
@@ -43,19 +49,19 @@
             <h2>Mer om ABC-klubben:</h2>
             <ul>
               <li><a href="#">Kontaktuppgifter</a></li>
-              <li><a href="#">ABC-faq:</a> Ofta ställda frågor</li>
+              <li><a href="#">ABC-faq: Ofta ställda frågor</a></li>
               <li><a href="#">Hur får jag support?</a></li>
-              <li><a href="#">Årsmöteshandlingar</a> från 1980 och framåt</li>
+              <li><a href="#">Årsmöteshandlingar från 1980 och framåt</a></li>
               <li>
-                <a href="#">Styrelseledamöter</a> från 1980 och framåt - tabell
+                <a href="#">Styrelseledamöter från 1980 och framåt - tabell</a>
               </li>
               <li>
-                <a href="#">Nyhetsbrevet ABC</a> från september 2011 och framåt
+                <a href="#">Nyhetsbrevet ABC från september 2011 och framåt</a>
               </li>
-              <li><a href="#">ABC-bladet</a> från 1997 till 2010</li>
-              <li><a href="#">ABC-bullen</a> från 2001 till 2010</li>
+              <li><a href="#">ABC-bladet från 1997 till 2010</a></li>
+              <li><a href="#">ABC-bullen från 2001 till 2010</a></li>
               <li>
-                <a href="#">Nätverksinställningar</a> i ett lokalt hemmanätverk
+                <a href="#">Nätverksinställningar i ett lokalt hemmanätverk</a>
               </li>
               <li><a href="#">Möten för medlemmar</a></li>
             </ul>
@@ -81,7 +87,7 @@
               <li>
                 <a href="#">Om klubbens e-postserver och e-postprogram</a>
               </li>
-              <li><a href="#">Om SMTP-AUTH</a> och hur du använder det</li>
+              <li><a href="#">Om SMTP-AUTH och hur du använder det</a></li>
             </ul>
           </article>
           <article class="chat">
@@ -111,7 +117,7 @@
             <ul>
               <li><a href="#">Windows-länkar</a> - Johan Persson</li>
               <li>
-                <a href="#">Opinionsundersökning</a> på webben, - av Anders
+                <a href="#">Opinionsundersökning på webben,</a> - av Anders
                 Franzén
               </li>
               <li>
@@ -119,8 +125,9 @@
                 Persson
               </li>
               <li>
-                Här hittar du det som finns kvar av
-                <a href="#">Programbanken</a>
+                <a href="#"
+                  >Här hittar du det som finns kvar av Programbanken</a
+                >
               </li>
             </ul>
           </article>
@@ -136,8 +143,8 @@
       <div class="gdpr">
         <p>
           Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
-          nya dataskyddsförordningen (GDPR). Läs mer
-          <a href="#">här</a>.
+          nya dataskyddsförordningen (GDPR).
+          <a href="#">Läs mer om GDPR här.</a>
         </p>
       </div>
     </footer>
