--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <navbar>
+    <nav>
       <a
         href="#"
         class="menu"
@@ -24,13 +24,15 @@
       >
         <div class="menu"></div>
       </a>
-      <a href="index.html" class="home slide">Startsida</a>
-      <a href="/html/info.html" class="info slide">Information</a>
-      <a href="/html/board.html" class="board slide">Styrelse</a>
-      <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
-      <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide membersites">Medlemssajter</a>
-    </navbar>
+      <div class="sitescontainer">
+        <a href="/index.html" class="home slide">Startsida</a>
+        <a href="/html/info.html" class="info slide">Information</a>
+        <a href="/html/board.html" class="board slide">Styrelse</a>
+        <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
+        <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
+        <a href="#" class="slide membersites">Medlemssajter</a>
+      </div>
+    </nav>
     <main>
       <div
         class="banner"
@@ -54,9 +56,11 @@
           e-post.
         </p>
         <p>
-          Det finns även en del andra
-          <a href="/html/benefits.html">förmåner</a> du kan få som medlem, t.ex.
-          har vi en VPN-tjänst.
+          Det finns även en del andra förmåner du kan få som medlem, t.ex. har
+          vi en VPN-tjänst.
+          <a href="/html/benefits.html"
+            >Se alla förmåner som medlemmar får här.</a
+          >
         </p>
         <p>
           ABC-klubben bildades 1980 och var från början en klubb för användare
@@ -67,10 +71,8 @@
           ABC-Klubben är en internetreklambefriad förening. Klubben bidrar inte
           till nättracking och försöker motverka nätets spårningstjänster. Den
           enda analys föreningen gör är för att minska spam i din e-post.
-        </p>
-        <p>
-          Kontrollera dina inställningar för e-post
-          <a href="#">här</a>.
+          <br />
+          <a href="#">Kontrollera dina inställningar för e-post här.</a>
         </p>
       </div>
     </main>
@@ -83,8 +85,8 @@
       <div class="gdpr">
         <p>
           Från och med 25 maj 2018 behandlas personuppgifter i enlighet med den
-          nya dataskyddsförordningen (GDPR). Läs mer
-          <a href="#">här</a>.
+          nya dataskyddsförordningen (GDPR).
+          <a href="#">Läs mer om GDPR här.</a>
         </p>
       </div>
     </footer>
