--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <nav>
+    <header>
       <a
         href="#"
         class="menu"
@@ -24,15 +24,15 @@
       >
         <div class="menu"></div>
       </a>
-      <div class="sitescontainer">
+      <nav>
         <a href="/index.html" class="home slide">Startsida</a>
         <a href="/html/info.html" class="info slide">Information</a>
         <a href="/html/board.html" class="board slide">Styrelse</a>
         <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
         <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
         <a href="#" class="slide membersites">Medlemssajter</a>
-      </div>
-    </nav>
+      </nav>
+    </header>
     <main>
       <div
         class="banner"
