--- a/html/board.html
+++ b/html/board.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
-    <nav>
+    <header>
       <a
         href="#"
         class="menu"
@@ -23,13 +23,15 @@
       >
         <div class="menu"></div>
       </a>
-      <a href="/index.html" class="home slide">Startsida</a>
-      <a href="/html/info.html" class="info slide">Information</a>
-      <a href="/html/board.html" class="board slide">Styrelse</a>
-      <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
-      <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide membersites">Medlemssajter</a>
-    </nav>
+      <nav>
+        <a href="/index.html" class="home slide">Startsida</a>
+        <a href="/html/info.html" class="info slide">Information</a>
+        <a href="/html/board.html" class="board slide">Styrelse</a>
+        <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
+        <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
+        <a href="#" class="slide membersites">Medlemssajter</a>
+      </nav>
+    </header>
     <main>
       <div
         class="banner"
@@ -67,7 +69,7 @@
         <h3>Valberedning</h3>
         <p>Vakant</p>
         <h3>Stadgar</h3>
-        <p>Våra stadgar finns <a href="stadgar.pdf">här</a></p>
+        <p><a href="#">Våra stadgar finns här.</a></p>
       </div>
     </main>
     <footer>
