--- a/html/pcsystems.html
+++ b/html/pcsystems.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
-    <nav>
+    <header>
       <a
         href="#"
         class="menu"
@@ -26,13 +26,15 @@
       >
         <div class="menu"></div>
       </a>
-      <a href="/index.html" class="home slide">Startsida</a>
-      <a href="/html/info.html" class="info slide">Information</a>
-      <a href="/html/board.html" class="board slide">Styrelse</a>
-      <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
-      <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-      <a href="#" class="slide membersites">Medlemssajter</a>
-    </nav>
+      <nav>
+        <a href="/index.html" class="home slide">Startsida</a>
+        <a href="/html/info.html" class="info slide">Information</a>
+        <a href="/html/board.html" class="board slide">Styrelse</a>
+        <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
+        <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
+        <a href="#" class="slide membersites">Medlemssajter</a>
+      </nav>
+    </header>
     <main>
       <div
         class="banner"
