--- a/index.html
+++ b/index.html
@@ -25,12 +25,39 @@
         <div class="menu"></div>
       </a>
       <nav>
-        <a href="/index.html" class="home slide">Startsida</a>
-        <a href="/html/info.html" class="info slide">Information</a>
-        <a href="/html/board.html" class="board slide">Styrelse</a>
-        <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
-        <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
-        <a href="#" class="slide membersites">Medlemssajter</a>
+        <a href="/index.html" class="home slide" aria-label="Startsida"
+          >Startsida</a
+        >
+        <a
+          href="/html/info.html"
+          class="info slide"
+          aria-label="Information om abc-klubben"
+          >Information</a
+        >
+        <a
+          href="/html/board.html"
+          class="board slide"
+          aria-label="Abc-klubbens styrelse"
+          >Styrelse</a
+        >
+        <a
+          href="/html/benefits.html"
+          class="benefits slide"
+          aria-label="Abc-klubbens förmåner"
+          >Medlemsförmåner</a
+        >
+        <a
+          href="/html/pcsystems.html"
+          class="pcsystems slide"
+          aria-label="Abc-klubbens datorsystem"
+          >Datorsystem</a
+        >
+        <a
+          href="#"
+          class="slide membersites"
+          aria-label="Abc-klubbens medlemssajter"
+          >Medlemssajter</a
+        >
       </nav>
     </header>
     <main>
