--- a/html/info.html
+++ b/html/info.html
@@ -2,10 +2,8 @@
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="Medlemsförmåner"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Information kring abc-klubben" />
     <title>Information</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
