--- a/html/pcsystems.html
+++ b/html/pcsystems.html
@@ -47,7 +47,7 @@
       </div>
       <div class="content">
         <h1>Vårt datorsystem</h1>
-        <section class="wrapper pcsystem">
+        <section class="wrapper pcsystems">
           <article>
             <h2>Kärnan</h2>
             <p>
