--- a/html/info.html
+++ b/html/info.html
@@ -36,7 +36,6 @@
     <main>
       <div
         class="banner"
-        aria-label="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
         title="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
       >
         <p class="abc">ABC</p>
@@ -44,7 +43,7 @@
       </div>
       <div class="content">
         <h1>Info för klubbens medlemmar</h1>
-        <section class="wrapper">
+        <div class="wrapper">
           <article class="moreabc">
             <h2>Mer om ABC-klubben:</h2>
             <ul>
@@ -99,13 +98,17 @@
           <article class="sftp">
             <h2>SFTP - File Transfer Protocol:</h2>
             <ul>
-              <li><a href="#">WinSCP Ett SFTP-program med stöd för SCP</a></li>
+              <li>
+                <a href="#">WinSCP Ett SFTP-program med stöd för SCP</a>
+              </li>
             </ul>
           </article>
           <article class="websites">
             <h2>Om webbsidor på <u>www.abc.se</u></h2>
             <ul>
-              <li><a href="#">Egen hemsida hos ABC-klubben. Hur gör man</a></li>
+              <li>
+                <a href="#">Egen hemsida hos ABC-klubben. Hur gör man</a>
+              </li>
               <li>
                 <a href="#">Lösenordsskydda kataloger på www.abc.se</a> - av
                 Peter Kindström
@@ -131,7 +134,7 @@
               </li>
             </ul>
           </article>
-        </section>
+        </div>
       </div>
     </main>
     <footer>
