--- a/html/pcsystems.html
+++ b/html/pcsystems.html
@@ -39,7 +39,6 @@
     <main>
       <div
         class="banner"
-        aria-label="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
         title="Bild på ett träskrivbord med retro dator och texten ABC-Klubben"
       >
         <p class="abc">ABC</p>
@@ -47,7 +46,7 @@
       </div>
       <div class="content">
         <h1>Vårt datorsystem</h1>
-        <section class="wrapper pcsystems">
+        <div class="wrapper pcsystems">
           <article>
             <h2>Kärnan</h2>
             <p>
@@ -155,7 +154,7 @@
               på Sonja.
             </p>
           </article>
-        </section>
+        </div>
       </div>
     </main>
     <footer>
