--- a/html/pcsystems.html
+++ b/html/pcsystems.html
@@ -28,11 +28,11 @@
         <div class="menu"></div>
       </a>
       <nav>
-        <a href="/index.html" class="home slide">Startsida</a>
-        <a href="/html/info.html" class="info slide">Information</a>
-        <a href="/html/board.html" class="board slide">Styrelse</a>
-        <a href="/html/benefits.html" class="benefits slide">Medlemsförmåner</a>
-        <a href="/html/pcsystems.html" class="pcsystems slide">Datorsystem</a>
+        <a href="../index.html" class="home slide">Startsida</a>
+        <a href="./info.html" class="info slide">Information</a>
+        <a href="./board.html" class="board slide">Styrelse</a>
+        <a href="./benefits.html" class="benefits slide">Medlemsförmåner</a>
+        <a href="./pcsystems.html" class="pcsystems slide">Datorsystem</a>
         <a href="#" class="slide membersites">Medlemssajter</a>
       </nav>
     </header>
