--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
         <div class="menu"></div>
       </a>
       <nav>
-        <a href="/index.html" class="home slide" aria-label="Startsida"
+        <a href="./index.html" class="home slide" aria-label="Startsida"
           >Startsida</a
         >
         <a
-          href="/html/info.html"
+          href="./html/info.html"
           class="info slide"
           aria-label="Information om abc-klubben"
           >Information</a
         >
         <a
-          href="/html/board.html"
+          href="./html/board.html"
           class="board slide"
           aria-label="Abc-klubbens styrelse"
           >Styrelse</a
         >
         <a
-          href="/html/benefits.html"
+          href="./html/benefits.html"
           class="benefits slide"
           aria-label="Abc-klubbens förmåner"
           >Medlemsförmåner</a
         >
         <a
-          href="/html/pcsystems.html"
+          href="./html/pcsystems.html"
           class="pcsystems slide"
           aria-label="Abc-klubbens datorsystem"
           >Datorsystem</a
@@ -84,7 +84,7 @@
         <p>
           Det finns även en del andra förmåner du kan få som medlem, t.ex. har
           vi en VPN-tjänst.
-          <a href="/html/benefits.html"
+          <a href="./html/benefits.html"
             >Se alla förmåner som medlemmar får här.</a
           >
         </p>
